--- a/sass/modules/_why-choose-area-one.scss
+++ b/sass/modules/_why-choose-area-one.scss
@@ -91,6 +91,9 @@
             @include lg{
                 padding: 0 40px;
             }
+            .about-info-card{
+                margin: 0;
+            }
         }
     }
 }
